# prg_coplaca

./: .gitignore  WpfEmbarques.sln
InformesQuestPdf/: InformeVale.cs  InformeValeDatosInteres.cs  InformesQuestPdf.csproj
InformesQuestPdf/Models/: DatosCabecera.cs  LineaDatosInteres.cs  LineaEmbarque.cs
WpfEmbarques/: .editorconfig  App.config  Application.xaml  Application.xaml.vb  ConfigGlobal.vb  PaginaPrincipal.xaml  PaginaPrincipal.xaml.vb  ValidacionesGlobales.vb  WpfEmbarques.vbproj  appsettings.json  emailsettings.json
WpfEmbarques/Models/: Buque.vb  CabEmbarquePrueba.vb  CabVale.vb  CabValeDto.vb  Cargador.vb  (+17 more)
agente_ia/: README.md
agentes_ia2/: .env.example  .gitignore  ARCHITECTURE.md  README.md  api_server.py  main.py  prueba.py  pyproject.toml  test_css.py
agentes_ia2/src/agente_sql/: allowed_tables.py  security.py
agentes_ia2/src/agente_sql/agent/: agente_sql.py
agentes_ia2/src/agente_sql/api/: app.py
agentes_ia2/src/agente_sql/api/routes/: export.py  query.py  schema.py
agentes_ia2/src/agente_sql/context/: business_context.py  table_context.py
agentes_ia2/src/agente_sql/infrastructure/: config.py  logger.py  sqlserver.py
agentes_ia2/src/agente_sql/schemas/: models.py
agentes_ia2/src/agente_sql/services/: export_service.py  quick_queries.py  sql_service.py
agentes_ia2/src/agente_sql/tools/: tools_sql.py
agentes_ia2/tests/: test_buscar_caja_real.py  test_quick_queries.py  test_schema.py
agentes_ia2/ui/streamlit/: app.py
agentes_ia2/ui/web/: index.html
agentes_ia2/ui/web/css/: styles.css
agentes_ia2/ui/web/js/: app.js
(+52 files in other folders)
